--- a/.gitignore
+++ b/.gitignore
@@ -210,6 +210,9 @@ __marimo__/
 data/raw/
 data/processed/
 data/private/
+data/**/*.csv
+data/**/*.tsv
+data/**/*.xlsx
 exports/
 *.parquet
 *.sqlite
